add PUT/DELETE/PATCH for views
